fix: harden index repository loading and domain parsing guards